<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dailymotion.android.player.sdk.PlayerWebView
        android:id="@+id/playerWebView"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView android:id="@+id/scrollContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerWebView">

        <LinearLayout android:id="@+id/ControlsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controlsContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <!-- Controls buttons -->
                <Button
                    android:id="@+id/toggleControlsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_controls"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/showControlsButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/showControlsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/show_controls"
                    app:layout_constraintLeft_toRightOf="@id/toggleControlsButton"
                    app:layout_constraintRight_toLeftOf="@id/hideControlsButton"
                    app:layout_constraintTop_toTopOf="@id/toggleControlsButton" />

                <Button
                    android:id="@+id/hideControlsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_controls"
                    app:layout_constraintLeft_toRightOf="@id/showControlsButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/toggleControlsButton" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/firstRowBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="toggleControlsButton, showControlsButton, hideControlsButton" />

                <!-- Play / Pause buttons -->
                <Button
                    android:id="@+id/togglePlayPauseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_play_pause"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/playButton"
                    app:layout_constraintTop_toBottomOf="@id/firstRowBarrier" />

                <Button
                    android:id="@+id/playButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    app:layout_constraintLeft_toRightOf="@id/togglePlayPauseButton"
                    app:layout_constraintRight_toLeftOf="@id/pauseButton"
                    app:layout_constraintTop_toTopOf="@id/togglePlayPauseButton" />

                <Button
                    android:id="@+id/pauseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    app:layout_constraintLeft_toRightOf="@id/playButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/togglePlayPauseButton" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/secondRowBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="togglePlayPauseButton, playButton, pauseButton" />

                <!-- Seek buttons -->
                <Button
                    android:id="@+id/seekForwardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seek_forward"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/seekBackwardButton"
                    app:layout_constraintTop_toBottomOf="@id/secondRowBarrier" />

                <Button
                    android:id="@+id/seekBackwardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seek_backward"
                    app:layout_constraintLeft_toRightOf="@id/seekForwardButton"
                    app:layout_constraintRight_toLeftOf="@id/seekEditText"
                    app:layout_constraintTop_toTopOf="@id/seekForwardButton" />

                <EditText
                    android:id="@+id/seekEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/seek_value_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="@id/seekForwardButton"
                    app:layout_constraintLeft_toRightOf="@id/seekBackwardButton"
                    app:layout_constraintRight_toLeftOf="@id/secondsTextView"
                    app:layout_constraintTop_toTopOf="@id/seekForwardButton" />

                <TextView
                    android:id="@+id/secondsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/seek_unit"
                    app:layout_constraintBaseline_toBaselineOf="@id/seekEditText"
                    app:layout_constraintLeft_toRightOf="@id/seekEditText"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/seekForwardButton" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/thirdRowBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="seekForwardButton, seekBackwardButton, seekEditText, secondsTextView" />

                <!-- Volume buttons -->
                <Button
                    android:id="@+id/muteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mute"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/unMuteButton"
                    app:layout_constraintTop_toBottomOf="@id/thirdRowBarrier" />

                <Button
                    android:id="@+id/unMuteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unmute"
                    app:layout_constraintLeft_toRightOf="@id/muteButton"
                    app:layout_constraintRight_toLeftOf="@id/volumeButton"
                    app:layout_constraintTop_toTopOf="@id/muteButton" />

                <Button
                    android:id="@+id/volumeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    app:layout_constraintLeft_toRightOf="@id/unMuteButton"
                    app:layout_constraintRight_toLeftOf="@id/volumeEditText"
                    app:layout_constraintTop_toTopOf="@id/muteButton" />

                <EditText
                    android:id="@+id/volumeEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/volume_value_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    app:layout_constraintLeft_toRightOf="@id/volumeButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/muteButton" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/fourthRowBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="muteButton, unMuteButton, volumeButton, volumeEditText" />

                <!-- Load video button -->
                <Button
                    android:id="@+id/loadVideoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_video"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/videoIdEditText"
                    app:layout_constraintTop_toBottomOf="@id/fourthRowBarrier" />

                <TextView android:id="@+id/videoIdTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_id_value_hint"
                    app:layout_constraintLeft_toRightOf="@id/loadVideoButton"
                    app:layout_constraintRight_toLeftOf="@id/videoIdEditText"
                    app:layout_constraintBaseline_toBaselineOf="@id/videoIdEditText"/>

                <EditText
                    android:id="@+id/videoIdEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/video_id_value_hint"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    app:layout_constraintBottom_toBottomOf="@id/loadVideoButton"
                    app:layout_constraintLeft_toRightOf="@id/videoIdTextView"
                    app:layout_constraintRight_toLeftOf="@id/playlistIdTextView"
                    app:layout_constraintTop_toTopOf="@id/loadVideoButton" />

                <TextView android:id="@+id/playlistIdTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_id_value_hint"
                    app:layout_constraintLeft_toRightOf="@id/videoIdEditText"
                    app:layout_constraintRight_toLeftOf="@id/playlistIdEditText"
                    app:layout_constraintBaseline_toBaselineOf="@id/playlistIdEditText"/>

                <EditText
                    android:id="@+id/playlistIdEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/playlist_id_value_hint"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    app:layout_constraintBottom_toBottomOf="@id/loadVideoButton"
                    app:layout_constraintLeft_toRightOf="@id/playlistIdTextView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/loadVideoButton" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/fifthRowBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="loadVideoButton, videoIdEditText" />

                <!-- Misc buttons -->
                <TextView
                    android:id="@+id/scaleModeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scale_mode"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/scaleModeEditText"
                    app:layout_constraintTop_toBottomOf="@id/fifthRowBarrier" />

                <EditText
                    android:id="@+id/scaleModeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/scale_mode"
                    app:layout_constraintTop_toTopOf="@id/scaleModeTextView"
                    app:layout_constraintLeft_toRightOf="@id/scaleModeTextView"
                    app:layout_constraintRight_toLeftOf="@id/qualityTextView"
                    app:layout_constraintBottom_toBottomOf="@id/scaleModeTextView"/>

                <TextView
                    android:id="@+id/qualityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quality"
                    android:layout_marginLeft="12dp"
                    app:layout_constraintLeft_toRightOf="@id/scaleModeEditText"
                    app:layout_constraintRight_toLeftOf="@id/qualityEditText"
                    app:layout_constraintBaseline_toBaselineOf="@id/scaleModeTextView" />

                <EditText
                    android:id="@+id/qualityEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="@id/qualityTextView"
                    app:layout_constraintLeft_toRightOf="@id/qualityTextView"
                    app:layout_constraintRight_toLeftOf="@id/qualityUnitTextView"
                    app:layout_constraintTop_toTopOf="@id/qualityTextView" />

                <TextView
                    android:id="@+id/qualityUnitTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/quality_unit"
                    app:layout_constraintBaseline_toBaselineOf="@id/qualityEditText"
                    app:layout_constraintLeft_toRightOf="@id/qualityEditText"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/qualityEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logControlsContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/log_default_height"
                android:background="#efefef"
                android:padding="4dp">

                <ImageButton
                    android:id="@+id/logFullScreenButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_fullscreen"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/logScrollBottom"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_scroll_bottom_toggled"
                    app:layout_constraintRight_toLeftOf="@id/logFullScreenButton"
                    app:layout_constraintTop_toTopOf="@id/logFullScreenButton" />

                <TextView
                    android:id="@+id/logText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:scrollbars="vertical"
                    android:text="@string/player_events_trace"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logFullScreenButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
